@@ -1,5 +1,8 @@
 2016-02-18  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Clone pre-gcc7 branch.
+	Merge from pre-gcc7 subversion id 233534
+	Pre-gcc7 subversion id is based on trunk 233527
 	* REVISION: Update subversion id for power9 branch.
+
 
